--- a/.github/workflows/nextcloud-plus.yml
+++ b/.github/workflows/nextcloud-plus.yml
@@ -26,7 +26,7 @@ jobs:
       - name: Build and push
         uses: docker/build-push-action@v4
         with:
-          context: '{{currentContext}}:nextcloud'
+          context: '{{defaultContext}}:nextcloud'
           file: nextcloud/Dockerfile
           push: true
           tags: freaktechnik/nextcloud-plus:latest
