--- a/nextcloud/Dockerfile
+++ b/nextcloud/Dockerfile
@@ -127,7 +127,7 @@ RUN set -ex; \
     sed -i 's/^pm.max_spare_servers =.*/pm.max_spare_servers = 3/' /usr/local/etc/php-fpm.d/www.conf
 
 COPY redis-session.ini /usr/local/etc/php/conf.d
-RUN chmod +r /usr/local/etc/php/conf.d/redis-session.ini
+RUN chmod +rw /usr/local/etc/php/conf.d/redis-session.ini
 
 RUN chown www-data:root -R /var/log/supervisord/ && \
     chown www-data:root -R /var/run/supervisord/ && \
