fix: update nextcloud nginx config

--- a/nextcloud/nginx.conf
+++ b/nextcloud/nginx.conf
@@ -30,6 +30,13 @@ http {
         server 192.168.50.236:9000;
     }
 
+
+    # Set the `immutable` cache control options only for assets with a cache busting `v` argument
+    map $arg_v $asset_immutable {
+        "" "";
+        default ", immutable";
+    }
+
     server {
         listen 80;
 
@@ -45,6 +52,8 @@ http {
         client_max_body_size 512M;
         fastcgi_buffers 64 4K;
 
+        server_tokens off;
+
         # Enable gzip but do not remove ETag headers
         gzip on;
         gzip_vary on;
@@ -57,13 +66,22 @@ http {
         # with the `ngx_pagespeed` module, uncomment this line to disable it.
         #pagespeed off;
 
+        # The settings allows you to optimize the HTTP2 bandwidth.
+        # See https://blog.cloudflare.com/delivering-http-2-upload-speed-improvements/
+        # for tuning hints
+        client_body_buffer_size 512k;
+
+        types {
+            text/javascript js mjs;
+           application/wasm wasm;
+        }
+
         # HTTP response headers borrowed from Nextcloud `.htaccess`
         add_header Referrer-Policy                      "no-referrer"   always;
         add_header X-Content-Type-Options               "nosniff"       always;
-        add_header X-Download-Options                   "noopen"        always;
         add_header X-Frame-Options                      "SAMEORIGIN"    always;
         add_header X-Permitted-Cross-Domain-Policies    "none"          always;
-        add_header X-Robots-Tag                         "none"          always;
+        add_header X-Robots-Tag                         "noindex, nofollow" always;
         add_header X-XSS-Protection                     "1; mode=block" always;
 
         # Remove X-Powered-By, which is an information leak
@@ -149,11 +167,20 @@ http {
 
             fastcgi_intercept_errors on;
             fastcgi_request_buffering off;
+
+            fastcgi_max_temp_file_size 0;
         }
 
-        location ~ \.(?:css|js|svg|gif)$ {
+        location ~ \.(?:css|js|mjs|svg|gif|png|jpg|ico|wasm|tflite|map|ogg|flac)$ {
             try_files $uri /index.php$request_uri;
-            expires 6M;         # Cache-Control policy borrowed from `.htaccess`
+            # HTTP response headers borrowed from Nextcloud `.htaccess`
+            add_header Cache-Control                     "public, max-age=15778463$asset_immutable";
+            add_header Referrer-Policy                   "no-referrer"       always;
+            add_header X-Content-Type-Options            "nosniff"           always;
+            add_header X-Frame-Options                   "SAMEORIGIN"        always;
+            add_header X-Permitted-Cross-Domain-Policies "none"              always;
+            add_header X-Robots-Tag                      "noindex, nofollow" always;
+            add_header X-XSS-Protection                  "1; mode=block"     always;
             access_log off;     # Optional: Don't log access to assets
         }
 
