fix: use standardized mime type

--- a/nextcloud/nginx.conf
+++ b/nextcloud/nginx.conf
@@ -72,7 +72,7 @@ http {
         client_body_buffer_size 512k;
 
         types {
-            text/javascript js mjs;
+           application/javascript js mjs;
            application/wasm wasm;
         }
 
